adicionei um paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,6 +10,7 @@
     <h1>Olá, mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo aspernatur doloremque praesentium hic vitae consectetur aliquam aut magni cumque? Perspiciatis ea atque corrupti ab excepturi eveniet repudiandae cumque nihil eaque?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro fugit eum labore nesciunt mollitia sed. Nulla, sit? Perferendis eaque ducimus, sequi sed eligendi iusto quisquam aut corporis qui et aperiam!</p>
     
 </body>
 </html>
